# zayona

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
apps/api/: __init__.py
apps/cli/: __init__.py
apps/dashboard/: __init__.py
configs/: default.toml  logging.toml  models.toml  workers.toml
engine/: __init__.py
engine/config/: __init__.py  loader.py  models.py  settings.py
engine/context/: __init__.py
engine/memory/: __init__.py
engine/plugins/: __init__.py
engine/providers/: __init__.py
engine/routing/: __init__.py
engine/scheduler/: __init__.py
engine/tools/: __init__.py
engine/utils/: __init__.py  logger.py
engine/verification/: __init__.py
engine/workers/: __init__.py
scripts/: check_config.py
sdk/: __init__.py
tests/: __init__.py  test_config.py  test_logger.py
